--- a/CombAnalysis/modelDepiction.Rmd
+++ b/CombAnalysis/modelDepiction.Rmd
@@ -4,6 +4,12 @@ output: html_notebook
 ---
 
 ```{r}
+library(pacman)
+pacman::p_load(pheatmap, igraph, heatmaply, RColorBrewer, tidyverse, ggpubr)
+```
+
+
+```{r}
 library(igraph)
 posTraits <- read.csv("~/Google Drive/Volumes/Research Project/Trait Network_Behaviral/generating network/output/allPosCents.csv")
 negTraits <- read.csv("~/Google Drive/Volumes/Research Project/Trait Network_Behaviral/generating network/output/allNegCents.csv")
@@ -19,7 +25,10 @@ negGraph <- graph.adjacency(negMat)
 simPos <- as.matrix(similarity.dice(posGraph))
 colnames(simPos) <- posTraits$trait
 rownames(simPos) <- posTraits$trait
+```
 
+
+```{r}
 outphm<-pheatmap(simPos, fontsize_row = 6, fontsize_col = 6, angle_col = 45, angle_row =45, width=100, height = 200 )
 heatmaply(normalize(simPos), Rowv=outphm[[1]], Colv=outphm[[2]], revC=TRUE, fontsize_row = 2, fontsize_col = 2, angle_col = 45, angle_row =45,  limits = c(-1, 1), colors = colorRampPalette(rev(brewer.pal(n = 7, name =
   "RdYlBu")))(100) )
@@ -108,7 +117,7 @@ ggnet2(subNet, directed=TRUE, arrow.size = 3.5, arrow.gap = 0.05, layout.exp = .
 
 
 ```{r}
-library(ggpubr)
+
 mds.sim <- (1 - simPos) %>%
   cmdscale() %>%
   as_tibble()
@@ -131,4 +140,28 @@ ggscatter(mds.sim[inds,], x = "Dim.1", y = "Dim.2",
   scale_x_continuous(breaks = seq(from=-.3,to=.3,by=.3), labels=c("32% Group Probability", "0% Group Probability", "68% Group Probability")) +
     scale_y_continuous(breaks = seq(from=-.5,to=.2,by=.35), labels=c("32% Group Probability", "0% Group Probability", "68% Group Probability"))
 ```
+
+```{r}
+#trsup <- data.frame(x=c(-2,-2,2), y=c(-2,2,2))
+#trinf <- data.frame(x=c(-2,2,2), y=c(-2,-2,2))
+
+#mds.simZ <- as.data.frame(scale(mds.sim))
+mds.simRS <- mds.sim
+mds.simRS$Dim.1 <- scales::rescale(mds.sim$Dim.1, to=c(-1,1))
+mds.simRS$Dim.2 <- scales::rescale(mds.sim$Dim.2, to=c(-1,1))
+
+
+trinf <- data.frame(x=c(-5,5,5), y=c(5,5,-5))
+trsup <- -trinf
+
+df <- data.frame(x = sample(1:100, 100, replace = FALSE), y = sample(1:100, 100, replace=FALSE))
+
+ggscatter(mds.simRS[inds,], x = "Dim.1", y = "Dim.2", 
+          size = 1,
+          label = colnames(simPos)[inds],
+          repel = TRUE) + geom_polygon(aes(x=x,y=y), data = trsup, fill= "dodgerblue3", alpha = .4) + geom_polygon(aes(x=x,y=y), data = trinf, fill = "#FF000066", alpha = .4) + coord_cartesian(xlim=c(-1.5,1.5), ylim=c(-1.5,1.5)) + xlab("Categories") + ylab("Categories") +
+  scale_x_continuous(breaks = seq(from=-1,to=1,by=1), labels=c("Social", " ", "Studious")) +
+    scale_y_continuous(breaks = seq(from=-1,to=1,by=1), labels=c("Social", " ", "Studious"))
+```
+
 
